added event replay functionality
